# oauth2-noserver-rs

./: Cargo.toml  LICENSE  Makefile  README.md
src/: lib.rs  test.rs
